objects/Success_Program_Step__c.object
<CustomObject>
    <fields>
        <fullName>Add_Days__c</fullName>
        <inlineHelpText>This number will be used to add today’s date + &lt;Days&gt; to the newly created Engagement step to facilitate planning.</inlineHelpText>
        <label>Add Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Success_Program__c</fullName>
        <label>Success Program</label>
        <referenceTo>Success_Program__c</referenceTo>
        <relationshipLabel>Success Program Steps</relationshipLabel>
        <relationshipName>Success_Program_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Success Program Step</label>
    <nameField>
        <label>Success Program Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Success Program Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>